# numerical_analysis_development

./: main.py  pyproject.toml
CELA3A_feasibility_study/: cela3a_output.py  clustering.py  main.py  pyproject.toml  qc_conductor.py  result_merger.py
Chymotrypsin_feasibility_study/: clustering.py  main.py  pyproject.toml
Chymotrypsin_feasibility_study/.github/: copilot-instructions.md
Chymotrypsin_feasibility_study_detailed_result/: chymotrypsin_output.py  clustering.py  pyproject.toml  qc_conductor.py
DPP4_FAP_enzeavour_train/: dpp4_fap_output.py  gaussian_fitting.py  main.py  pyproject.toml  qc_conductor.py  scatter_fitting.py  test.py
DPP4_FAP_feasibility_study_detailed_result/: dpp4_fap_output.py  enhanced_histogram.py  gaussian_fitting.py  main.py  scatter_fitting.py
Discriminate_fomula/: README.md  enzeavour_score_calculator.ipynb  main.py  pyproject.toml  random_forest_calculator.xlsx  random_forest_calculator_raw.xlsx  random_forest_calculator_unit.xlsx  test_raw.csv  test_raw_with_scores.csv  test_unit.csv  test_unit_with_scores.csv  train_raw.csv  train_unit.csv
